second batch cask

--- a/dot_local/share/homebrew/Brewfile
+++ b/dot_local/share/homebrew/Brewfile
@@ -3,5 +3,14 @@ tap "homebrew/core"
 tap "rcmdnk/file"
 brew "chezmoi"
 brew "git"
-brew "iterm2"
- 
+brew "mas" 
+cask "butler"
+cask "dropbox" 
+cask "forklift"
+cask "google-drive"
+cask "iterm2"
+cask "onedrive"
+cask "raindropio" 
+cask "visual-studio-code"
+cask "vivaldi"
+cask "rectangle-pro"
