--- a/dot_local/share/homebrew/Brewfile
+++ b/dot_local/share/homebrew/Brewfile
@@ -1,16 +1,35 @@
 tap "homebrew/bundle"
 tap "homebrew/core"
 tap "rcmdnk/file"
+
+# Brews
 brew "chezmoi"
 brew "git"
 brew "mas" 
+brew "fish"
+
+# Casks 
 cask "butler"
 cask "dropbox" 
 cask "forklift"
 cask "google-drive"
 cask "iterm2"
 cask "onedrive"
-cask "raindropio" 
 cask "visual-studio-code"
 cask "vivaldi"
 cask "rectangle-pro"
+
+# MAS Mac app Store
+mas "Save to Raindrop.io", id: 1549370672
+mas "AdBlock", id: 1402042596
+mas "DaisyDisk", id: 411643860
+mas "GarageBand", id: 682658836
+mas "Hush", id: 1544743900
+mas "OmniPlan", id: 1460319993
+mas "Pixelmator Pro", id: 1289583905
+mas "Save to Raindrop.io", id: 1549370672
+mas "Slack", id: 803453959
+mas "Strongbox", id: 897283731
+mas "Time Out", id: 402592703
+mas "Timery", id: 1425368544
+mas "Toggl Track", id: 1291898086
