--- a/dot_local/share/homebrew/Brewfile
+++ b/dot_local/share/homebrew/Brewfile
@@ -38,6 +38,7 @@ mas "AdBlock", id: 1402042596
 mas "DaisyDisk", id: 411643860
 mas "Hush", id: 1544743900
 mas "OmniPlan", id: 1460319993
+mas "OmniFocus 3", id: 1346203938
 mas "Pixelmator Pro", id: 1289583905
 mas "Save to Raindrop.io", id: 1549370672
 mas "Slack", id: 803453959
