--- a/dot_local/share/homebrew/Brewfile
+++ b/dot_local/share/homebrew/Brewfile
@@ -15,6 +15,10 @@ brew "fish"
 brew "fisher"
 brew "brew-cask-completion"
 
+# Lektor prerequisites
+brew "imagemagick"
+brew "ffmpeg"
+
 
 # Casks 
 cask "arq"
