--- a/dot_config/iterm2/settings/com.googlecode.iterm2.plist
+++ b/dot_config/iterm2/settings/com.googlecode.iterm2.plist
@@ -1488,6 +1488,8 @@
 			<string>kNextWindowPointerAction</string>
 		</dict>
 	</dict>
+	<key>ShowFullScreenTabBar</key>
+	<false/>
 	<key>Snippets</key>
 	<array>
 		<dict>
